@@ -1,14 +1,0 @@
-Function: algabsdim
-Section: algebras
-C-Name: algabsdim
-Prototype: lG
-Help: algabsdim(al): dimension of the algebra al over its prime subfield.
-Doc: Given an algebra \var{al} output by \tet{alginit} or by
- \tet{algtableinit}, returns the dimension of \var{al} over its prime subfield
- ($\Q$ or $\F_p$).
- \bprog
- ? nf = nfinit(y^3-y+1);
- ? A = alginit(nf, [-1,-1]);
- ? algabsdim(A)
- %3 = 12
- @eprog
