@@ -1340,7 +1340,6 @@ GEN     alg_complete(GEN rnf, GEN aut, GEN hi, GEN hf, long maxord);
 GEN     alg_csa_table(GEN nf, GEN mt, long v, long maxord);
 GEN     alg_cyclic(GEN rnf, GEN aut, GEN b, long maxord);
 long    alg_get_absdim(GEN al);
-long    algabsdim(GEN al);
 GEN     alg_get_abssplitting(GEN al);
 GEN     alg_get_aut(GEN al);
 GEN     algaut(GEN al);
@@ -1354,7 +1353,7 @@ GEN     algchar(GEN al);
 long    alg_get_degree(GEN al);
 long    algdegree(GEN al);
 long    alg_get_dim(GEN al);
-long    algdim(GEN al);
+long    algdim(GEN al, long abs);
 GEN     alg_get_hasse_f(GEN al);
 GEN     alghassef(GEN al);
 GEN     alg_get_hasse_i(GEN al);
