@@ -588,11 +588,12 @@ AP   85- algnorm, algtrace and algcharpoly now have an optional flag to get the
 AP   86- renamed algsplittingmatrix -> algtomatrix
 AP   87- algleftmultable now always returns the multiplication table on the
          integral basis
-AP   88- merged algdecomposition + algsimpledec -> algsimpledec
+AP   88- merge algdecomposition + algsimpledec -> algsimpledec
 AP   89- algpoleval: new syntax for matrix argument algpoleval(al,pol,[x,mx])
 BA   90- ellmoddegree: return only the modular degree, do not depend on current
          precision.
      91- polsturm: allow non-squarefree polynomials (count distinct roots)
+AP   92- merge algdim + algdim -> algdim(,{abs=0})
 
   Removed
       1- file 'MACHINES' (no longer maintained)
